added validations path params, added linting.
