# apis/docs/swagger.json
@@ -100,7 +100,48 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/cart/{id}/all": {
+            "delete": {
+                "description": "Remove all items from the cart identified by cartId",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Delete all items from cart",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "\"cart123\"",
+                        "description": "Cart ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "All items deleted successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Failed to delete items from cart",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ApiErrorResponsePayload"
+                        }
+                    }
+                }
+            }
+        },
+        "/cart/{id}/items/{itemId}": {
             "delete": {
                 "description": "Remove an item from the cart using itemId",
                 "consumes": [
@@ -140,45 +181,6 @@
                     },
                     "400": {
                         "description": "Failed to delete item",
-                        "schema": {
-                            "$ref": "#/definitions/commons.ApiErrorResponsePayload"
-                        }
-                    }
-                }
-            }
-        },
-        "/cart/{id}/all": {
-            "delete": {
-                "description": "Remove all items from the cart identified by cartId",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Cart"
-                ],
-                "summary": "Delete all items from cart",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "example": "\"cart123\"",
-                        "description": "Cart ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "All items deleted successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Failed to delete items from cart",
                         "schema": {
                             "$ref": "#/definitions/commons.ApiErrorResponsePayload"
                         }
@@ -365,10 +367,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/commons.ApiErrorResponsePayload"
                         }
                     }
                 }
@@ -398,6 +397,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Product"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ApiErrorResponsePayload"
                         }
                     }
                 }
@@ -441,6 +446,12 @@
                                 "type": "string"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ApiErrorResponsePayload"
+                        }
                     }
                 }
             },
@@ -470,6 +481,12 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ApiErrorResponsePayload"
                         }
                     }
                 }
